--- a/index.ipynb
+++ b/index.ipynb
@@ -29,12 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bootstrap():\n",
-    "    #Your code here"
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def bootstrap(sample, n):\n",
+    "    res = np.random.choice(sample, size=len(sample), replace=True)\n",
+    "    return res"
    ]
   },
   {
@@ -48,14 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def jack1():\n",
+    "def jack1(sample):\n",
     "    \"\"\"This function should take in a list of n observations and return n lists\n",
     "    each with one member (presumably the nth) removed.\"\"\"\n",
-    "    # Your code here"
+    "    samples = []\n",
+    "    for i in range(len(sample)):\n",
+    "        new_sample = sample[:i] + sample[i+1:]\n",
+    "        samples.append(new_sample)\n",
+    "    return samples"
    ]
   },
   {
@@ -82,12 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import itertools\n",
     "def permT(a,b):\n",
-    "    # Your code here"
+    "    union = a + b\n",
+    "    new_as = list(itertools.combinations(union, len(a)))\n",
+    "    new_bs = []\n",
+    "    for new_a in new_as:\n",
+    "        u_copy = union.copy()\n",
+    "        for a in new_a:\n",
+    "            u_copy.remove(a)\n",
+    "        new_bs.append(u_copy)\n",
+    "    return list(zip(new_as, new_bs))"
    ]
   },
   {
@@ -126,21 +143,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = []\n",
-    "b = []"
+    "a = [109.6927759 , 120.27296943, 103.54012038, 114.16555857,\n",
+    "       122.93336175, 110.9271756 , 114.77443758, 116.34159338,\n",
+    "       112.66413025, 118.30562665, 132.31196515, 117.99000948]\n",
+    "b = [123.98967482, 141.11969004, 117.00293412, 121.6419775 ,\n",
+    "       123.2703033 , 123.76944385, 105.95249634, 114.87114479,\n",
+    "       130.6878082 , 140.60768727, 121.95433026, 123.11996767,\n",
+    "       129.93260914, 121.01049611]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26 12\n",
+      "9657700.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "from scipy.special import comb\n",
+    "n_items = len(a)+len(b)\n",
+    "unique = len(set(a+b))\n",
+    "sample_size = len(a)\n",
+    "\n",
+    "print(n_items, sample_size)\n",
+    "print(comb(n_items, sample_size))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-91f063064fa7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdiff_mu_a_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcombos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpermT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"There are {} possible sample variations.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcombos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;31m#Initialize numerator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mai\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcombos\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-2fb54785b459>\u001b[0m in \u001b[0;36mpermT\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mnew_a\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnew_as\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mu_copy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0munion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnew_a\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m             \u001b[0mu_copy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mnew_bs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu_copy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "diff_mu_a_b = np.mean(a) - np.mean(b)\n",
+    "combos = permT(a, b)\n",
+    "print(\"There are {} possible sample variations.\".format(len(combos)))\n",
+    "num = 0 #Initialize numerator\n",
+    "for ai, bi in combos:\n",
+    "    diff_mu_ai_bi = np.mean(ai) - np.mean(bi)\n",
+    "    if diff_mu_ai_bi >= diff_mu_a_b:\n",
+    "        num +=1\n",
+    "p_val = num / len(combos)\n",
+    "print('P-value: {}'.format(p_val))"
    ]
   },
   {
@@ -154,11 +223,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import scipy.stats as stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6196331755824978\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "num = np.mean(a) - np.mean(b)\n",
+    "s = np.var(a+b)\n",
+    "n = len(a+b)\n",
+    "denom = s/np.sqrt(n)\n",
+    "t = num / denom\n",
+    "pval = stats.t.sf(np.abs(t), n-1)*2\n",
+    "print(pval)"
    ]
   },
   {
@@ -172,11 +265,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P-value: 0.4972\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "iterations = 10**4\n",
+    "diff_mu_a_b = np.mean(a) - np.mean(b)\n",
+    "num = 0 #Initialize numerator\n",
+    "for n in range(iterations):\n",
+    "    ai = bootstrap(a, len(a))\n",
+    "    bi = bootstrap(b, len(b))\n",
+    "    diff_mu_ai_bi = np.mean(ai) - np.mean(bi)\n",
+    "    if diff_mu_ai_bi >= diff_mu_a_b:\n",
+    "        num +=1\n",
+    "p_val = num / iterations\n",
+    "print('P-value: {}'.format(p_val))"
    ]
   },
   {
@@ -205,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
